Added PDF split Functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
             padding: 0;
             white-space: nowrap;
             background-color: rgb(237, 248, 141);
-            width:580px;
+            width:680px;
             }
         .nav-link{
             font-weight: bold;
@@ -35,6 +35,9 @@
         </li>
         <li>
         <a class="nav-link" href="http://127.0.0.1:5000/pdfToText">PDF to TEXT</a>
+        </li>
+        <li>
+        <a class="nav-link" href="http://127.0.0.1:5000/splitPdf">Split PDF</a>
         </li>
     </ul>
 
