Done the Changes by First  UPLOADING the File to server then do the operation

--- a/templates/pdfMergerOrdered.html
+++ b/templates/pdfMergerOrdered.html
@@ -1,24 +1,31 @@
 {% extends 'layout.html' %}
 {% block body %}
+    
+<!-- Main Content -->
+    <!-- Form for Merging Specific Number of Files and in Specific Order -->
+    <div class="container-fluid"  style="padding:20px; background-color: rgb(221, 221, 220); position: absolute; top: 58px;">
+       <div class="row justify-content-center align-items-center">     
+          <div class="col-sm-6 col-lg-6">
+             <form action="/pdfMergerOrdered" method="post" enctype='multipart/form-data'>
+                <div class="form-group">
+                   <label><b>Select the PDF Files</b></label><br/>
+                    Select PDF1: <input type="file" name="filename1" accept="application/pdf"><br/><br/>
+                    Select PDF2: <input type="file" name="filename2" accept="application/pdf"><br/><br/>
+                    Select PDF3: <input type="file" name="filename3" accept="application/pdf"><br/><br/>
+                    Select PDF4: <input type="file" name="filename4" accept="application/pdf"><br/><br/>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+             </form> 
+          </div>
+      
+          <div class="col-sm-4 col-lg-4">
+             {% if msg!="" and file_path!="" %}
+             <a href="{{file_path}}" style="color:rgb(36, 170, 53); text-decoration:none; font-weight:bold;"><b>{{msg}}</b></a>
+             {% endif %}
+          </div>
+    </div>
+ </div>
+ 
 
-<!-- Form for Merging Specific Number of Files and in Specific Order -->
-
-<form action="/pdfMergerOrdered" method='post' style="padding:20px; background-color: rgb(221, 221, 220); width:300px;">
-    Select PDF1: <input type="file" name="filename1" accept="application/pdf"><br/><br/>
-    Select PDF2: <input type="file" name="filename2" accept="application/pdf"><br/><br/>
-    Select PDF3: <input type="file" name="filename3" accept="application/pdf"><br/><br/>
-    Select PDF4: <input type="file" name="filename4" accept="application/pdf"><br/><br/>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
-<br/><br/>
-
-{% if msg!="" %}
-<span style="color:rgb(228, 40, 40); text-decoration:none; font-weight:bold;">{{msg}}</span>
-{% endif %}
-
-{% if pdfFile!="" %}
-<span><a href="{{pdfFile}}" style="color:rgb(6, 163, 32); text-decoration:none; font-weight:bold;">Download Merged File</a></span>
-{% endif %}
 
 {% endblock %}
