--- a/templates/splitPdf.html
+++ b/templates/splitPdf.html
@@ -1,17 +1,24 @@
 {% extends 'layout.html' %}
 {% block body %}
 
-<form action="/splitPdf" method='post' style="padding:20px; background-color: rgb(221, 221, 220); width:300px;">
-    <div class="form-group">
-        <label>Select the PDF Files</label>
-        <input type="file" class="form-control-file" name="filename" accept="application/pdf" multiple required>
+
+<!-- Main Content -->
+<div class="container-fluid"  style="padding:20px; background-color: rgb(221, 221, 220); position: absolute; top: 58px;">
+    <div class="row justify-content-center align-items-center">     
+        <div class="col-sm-6 col-lg-6">
+          <form action="/splitPdf" method="post" enctype='multipart/form-data'>
+             <div class="form-group">
+                <label><b>Select the PDF Files</b></label>
+                <input type="file" class="form-control-file" name="filename" accept="application/pdf" required/>
+             </div>
+             <button type="submit" class="btn btn-primary">Submit</button>
+          </form> 
+       </div>
+   
+       <div class="col-sm-4 col-lg-4">
+            <b>{{msg}}</b>
+       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<br/><br/>
-</div>
-<div class="form-group">
-    <b>{{msg}}</b>
 </div>
 
 {% endblock %}
