--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,40 +6,39 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     
     <style>
-        .inlineList {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start; 
-            list-style: none;
-            padding: 0;
-            white-space: nowrap;
-            background-color: rgb(237, 248, 141);
-            width:680px;
-            }
-        .nav-link{
-            font-weight: bold;
-        }
-        .nav-link:hover{
-            background-color: rgb(233, 248, 96);
-        }
+   
     </style>
     <title>PDF MERGER</title>
 </head>
 <body>
-    <ul class="inlineList">
-        <li>
-        <a class="nav-link" href="http://127.0.0.1:5000/pdfMerger">PDFmerger all at once</a>
-        </li>
-        <li>
-        <a class="nav-link" href="http://127.0.0.1:5000/pdfMergerOrdered">PDFmerger Specific in Order</a>
-        </li>
-        <li>
-        <a class="nav-link" href="http://127.0.0.1:5000/pdfToText">PDF to TEXT</a>
-        </li>
-        <li>
-        <a class="nav-link" href="http://127.0.0.1:5000/splitPdf">Split PDF</a>
-        </li>
-    </ul>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <div class="container">
+      <b><a class="navbar-brand" href="http://127.0.0.1:5000/">PDF Handler</a></b>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="http://127.0.01:5000/pdfMerger">PDF Merger <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://127.0.0.1:5000/pdfMergerOrdered">PDF Merger Ordered</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://127.0.0.1:5000/pdfToText">PDF to Text</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5000/splitPdf">PDF Split</a>
+            </li>
+          </ul>
+      </div>
+    </div>
+  </nav>
+
+
 
 {% block body %}
 {% endblock %}
