--- a/templates/pdfMerger.html
+++ b/templates/pdfMerger.html
@@ -1,34 +1,25 @@
 {% extends 'layout.html' %}
 {% block body %}
 
-<form action="/pdfMerger" method='post' style="padding:20px; background-color: rgb(221, 221, 220); width:300px;">
-    <div class="form-group">
-        <label>Select the PDF Files</label>
-        <input type="file" class="form-control-file" name="filename" accept="application/pdf" multiple>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
-<br/><br/>
-
-{% if msg!="" %}
-<span style="color:rgb(228, 40, 40); text-decoration:none; font-weight:bold;">{{msg}}</span>
-{% endif %}
-
-{% if pdfFile!="" %}
-<span><a href="{{pdfFile}}" style="color:rgb(6, 163, 32); text-decoration:none; font-weight:bold;">Download Merged File</a></span>
-{% endif %}
-
-<script>
-    $(function(){
-       $("input[type = 'submit']").click(function(){
-          var $fileUpload = $("input[type='file']");
-          if (parseInt($fileUpload.get(0).files.length) > 3){
-             alert("You are only allowed to upload a maximum of 3 files");
-          }
-       });
-    });
- </script>
-
+   <!-- Main Content -->
+   <div class="container-fluid"  style="padding:20px; background-color: rgb(221, 221, 220); position: absolute; top: 58px;">
+      <div class="row justify-content-center align-items-center">     
+         <div class="col-sm-6 col-lg-6">
+            <form action="/pdfMerger" method="post" enctype='multipart/form-data'>
+               <div class="form-group">
+                  <label><b>Select the PDF Files</b></label>
+                  <input type="file" class="form-control-file" name="filename[]" accept="application/pdf" multiple>
+               </div>
+               <button type="submit" class="btn btn-primary">Submit</button>
+            </form> 
+         </div>
+     
+         <div class="col-sm-4 col-lg-4">
+            {% if msg!="" and file_path!="" %}
+            <a href="{{file_path}}" style="color:rgb(36, 170, 53); text-decoration:none; font-weight:bold;"><b>{{msg}}</b></a>
+            {% endif %}
+         </div>
+   </div>
+</div>
 
 {% endblock %}
