--- a/templates/pdfToText.html
+++ b/templates/pdfToText.html
@@ -1,18 +1,25 @@
 {% extends 'layout.html' %}
 {% block body %}
 
-<form action="/pdfToText" method='post' style="padding:20px; background-color: rgb(221, 221, 220); width:300px;">
-    <div class="form-group">
-        <label>Select the PDF Files</label>
-        <input type="file" class="form-control-file" name="filename" accept="application/pdf" multiple required>
+
+<!-- Main Content -->
+<div class="container-fluid"  style="padding:20px; background-color: rgb(221, 221, 220); position: absolute; top: 58px;">
+    <div class="row justify-content-center">     
+       <div class="col-sm-12 col-lg-4">
+          <form action="/pdfToText" method="post" enctype='multipart/form-data'>
+             <div class="form-group">
+                <label><b>Select the PDF Files</b></label>
+                <input type="file" class="form-control-file" name="filename" accept="application/pdf" required/>
+             </div>
+             <button type="submit" class="btn btn-primary">Submit</button>
+          </form> 
+       </div>
+   
+       <div class="col-sm-12 col-lg-6 align-items-center">
+            <label><b>Comment:</b></label>
+            <textarea class="form-control" rows="10" id="outputArea" name="outputArea">{{convertedData}}</textarea>        
+       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<br/><br/>
-</div>
-<div class="form-group">
-    <label><b>Comment:</b></label>
-    <textarea class="form-control" rows="50" id="outputArea" name="outputArea" style="width:580px;">{{convertedData}}</textarea>
 </div>
 
 {% endblock %}
